# rubiks-cube-solver

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.app  Dockerfile.trainer  Dockerfile.vision  Dockerfile.wca-data  GOALS.md  LICENSE  NEXT_STEPS.md  PRODUCT_VALIDATION.md  README.md  SECURITY.md  SUPPORT.md  cloudflared-config.example.yml  deny.toml  docker-compose.dev.yml  docker-compose.train.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  roadmap-many-cubes.md  roadmap-scanner-cnn-swipe.md  roadmap.md  roadrunner.config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-commit
.roadrunner/: .gitignore  README.md  config.json  queue.json
ai/: index.md  registry.json  registry.schema.json
crates/api/: Cargo.toml
crates/api/src/: config.rs  error_kind.rs  lib.rs  main.rs  puzzle.rs  response.rs  routes.rs  scan_analysis.rs  scan_quality_gate.rs  solve.rs  state.rs  tests.rs
docs/: analytics.md  architecture.md  dataset-schema-v2.md  many-cubes-plan.md  project-plan.md  runtime.md  threat-model.md
ml/: __init__.py  data.py  model.py  requirements.txt  train_value_baseline.py
scanner/: DATASET_CARD.md  MODEL_CARD.md  __init__.py  model-manifest.schema.json  requirements-test.txt
scripts/: check-port.mjs  check-theme-colors.mjs
vision/: README.md  app.py  cnn.py  color.py  detection.py  face_detector.py  requirements.txt  schemas.py  session.py  tile_detector.py
vision_ml/: README.md  __init__.py  data.py  (+23 more)
(+1664 files in other folders)
