[package]
name = "rubiks-cube-solver-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "rubiks-cube-solver-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
cube-engine = { path = "../cube-engine" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
