[package]
name = "rubiks-cube-solver-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "rubiks-cube-solver-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
cube-engine = { path = "../cube-engine" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
